// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author SnapShotテスト(サポート済み) 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="author"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
  <div
    class="support-container"
  >
    <button
      class="support-button"
    >
      <img
        alt="ユーザー"
        class="support-image"
        src=""
      />
    </button>
    <!--v-if-->
  </div>
  
</div>
`;

exports[`Author SnapShotテスト(未サポート) 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="author"
  >
    <div
      class="author-thumbnail-image"
    >
      <img
        alt="ユーザー"
        class="author-thumbnail-image"
        src="https://example.com/author.jpg"
      />
    </div>
    <p
      class="author-name"
    >
      Test Author
    </p>
  </div>
  <div
    class="support-container"
  >
    <button
      class="support-button"
    >
      <img
        alt="ユーザー"
        class="support-image"
        src=""
      />
    </button>
    <p
      class="author-name"
    >
      10
    </p>
  </div>
  
</div>
`;
